--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React-app kit for a small project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server"
   },
   "author": "Alex Andreyev",
   "license": "ISC",
@@ -22,6 +22,8 @@
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0"
+    "babel-polyfill": "^6.23.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
