--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
+    "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
